# demo-github-actions

./: README.md  pyproject.toml
.github/workflows/: 1.example-action.yml  2.run-python-file.yml  3.run-matrixed-pytest-ghactions.yml  3.run-pytest-ghactions.yml  4.run-matrixed-pytest-dagger.yml  4.run-pytest-dagger.yml
dagger/: run_tests.py
python_app/: __init__.py  main.py
python_app/tests/: test_main.py
