[tool.poetry]
name = "demo-github-actions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "python_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
pytest = "^7.2.2"
dagger-io = "^0.3.3"
anyio = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
